# kys-claude-plugin

./: .bump_result.json  .gitignore  CLAUDE.md  Makefile  README.md  bumpversion  eslint.config.js  package-lock.json  package.json  plan.md  tsconfig.json
plugins/atelier/cli/: Cargo.toml
plugins/atelier/cli/src/: cli.rs  lib.rs  main.rs
plugins/atelier/cli/src/autopilot/: autopilot_md.rs  gh.rs  git.rs  mod.rs  run.rs
plugins/atelier/cli/src/git/: cli.rs  jira.rs  mod.rs  types.rs
plugins/atelier/cli/src/notify/: command.rs  config.rs  event.rs  exec.rs  message.rs  mod.rs  payload.rs  render.rs  transport.rs  types.rs
plugins/atelier/cli/tests/: autopilot_base_branch.rs  autopilot_hook_tests.rs  check_stagnation_tests.rs  check_tests.rs  cli_e2e.rs  config_tests.rs  epic_tests.rs  events_tests.rs  git_branch.rs  git_cli.rs  git_commands_branch.rs  git_commands_commit.rs  git_commands_guard.rs  git_commands_hook.rs  git_commands_pr.rs  git_commands_reviews.rs  git_commit.rs  git_core_git.rs  git_core_guard.rs  git_core_jira.rs  git_core_pr_guard.rs  git_git.rs  git_guard.rs  git_hook.rs  git_jira.rs  git_mocks.rs  git_pr.rs  git_pr_guard.rs  git_reviews.rs  issue_list_tests.rs  issue_tests.rs  mock_fs.rs  mock_gh.rs  mock_git.rs  mock_github.rs  notify_command.rs  notify_config.rs  notify_payload.rs  notify_render.rs  pipeline_tests.rs  (+8 more)
plugins/atelier/cli/tests/notify_support/: mod.rs
plugins/autodev/cli/: Cargo.toml
plugins/autodev/cli/docs/: class-diagram.md  task-internals.md
plugins/autodev/cli/src/: active.rs  lib.rs  main.rs
plugins/autodev/cli/src/cli/: claw.rs  context.rs  convention.rs  cron.rs  decisions.rs  hitl.rs  mod.rs  queue.rs  report.rs  spec.rs  worktree.rs
plugins/autodev/cli/src/client/: mod.rs
plugins/autodev/cli/src/components/: analyzer.rs  merger.rs  mod.rs  notifier.rs  reviewer.rs  verdict.rs  workspace.rs
plugins/autodev/cli/src/config/: loader.rs  mod.rs  models.rs
plugins/autodev/cli/src/consumer/: github.rs  issue.rs  merge.rs  mod.rs
plugins/autodev/cli/src/core/: board.rs  branch_naming.rs  collector.rs  completer.rs  datasource.rs  dependency.rs  handler.rs  history.rs  issue_title.rs  lifecycle.rs  mod.rs  models.rs  notifier.rs  phase.rs  queue_item.rs  repository.rs  runtime.rs  state_queue.rs  task.rs  task_queues.rs  worktree_policy.rs  yaml_task.rs
plugins/autodev/cli/src/daemon/: agent.rs  agent_impl.rs  daily_reporter.rs  log.rs  mod.rs  recovery.rs  status.rs  task.rs  task_context.rs  task_manager.rs  task_manager_impl.rs  task_runner.rs  task_runner_impl.rs  task_source.rs
plugins/autodev/cli/src/domain/: git_repository.rs  git_repository_factory.rs  labels.rs  mod.rs  models.rs  repository.rs
plugins/autodev/cli/src/infra/: mod.rs
plugins/autodev/cli/src/infrastructure/: mod.rs
plugins/autodev/cli/src/knowledge/: daily.rs  extractor.rs  mod.rs  models.rs
plugins/autodev/cli/src/pipeline/: issue.rs  merge.rs  mod.rs  pr.rs  task.rs  task_runner.rs
plugins/autodev/cli/src/queue/: mod.rs  models.rs  repository.rs  schema.rs  state_queue.rs  task_queues.rs
plugins/autodev/cli/src/scanner/: issues.rs  mod.rs  pulls.rs
plugins/autodev/cli/src/service/: mod.rs
plugins/autodev/cli/src/session/: output.rs
plugins/autodev/cli/src/sources/: github.rs
plugins/autodev/cli/src/tasks/: analyze.rs  extract.rs  implement.rs  improve.rs  merge.rs  mod.rs  review.rs  workflow_resolver.rs
plugins/autodev/cli/src/tui/: board.rs  events.rs  mod.rs  views.rs
plugins/autodev/cli/src/v5/: mod.rs
plugins/autodev/cli/src/workspace/: mod.rs
plugins/autodev/cli/tests/: autodev_marker_tests.rs  claw_decision_cli_tests.rs  claw_decision_tests.rs  claw_workspace_tests.rs  cli_tests.rs  component_tests.rs  config_loader_tests.rs  convention_apply_tests.rs  convention_tests.rs  cron_seed_tests.rs  daemon_consumer_tests.rs  daemon_recovery_tests.rs  daemon_scan_tests.rs  e2e_claw.rs  e2e_claw_commands.rs  e2e_convention.rs  e2e_cron_crud.rs  e2e_cross_cutting.rs  e2e_error_handling.rs  e2e_helpers.rs  e2e_hitl_workflow.rs  e2e_json_output.rs  e2e_queue_workflow.rs  e2e_repo_misc.rs  e2e_repo_spec_gaps.rs  e2e_spec_extras.rs  e2e_spec_lifecycle.rs  feedback_pattern_tests.rs  issue_verdict_tests.rs  knowledge_pr_tests.rs  notifier_tests.rs  pid_tests.rs  pipeline_e2e_tests.rs  queue_admin_tests.rs  queue_advance_tests.rs  repository_tests.rs  resource_cleanup_tests.rs  spec_repository_tests.rs  suggest_workflow_tests.rs  tmp_schema_print.rs  (+4 more)
plugins/autonomous/cli/: Cargo.toml
plugins/autonomous/cli/src/: lib.rs  main.rs
plugins/autonomous/cli/src/client/: mod.rs
plugins/autonomous/cli/src/config/: loader.rs  mod.rs  models.rs
plugins/autonomous/cli/src/consumer/: github.rs  issue.rs  merge.rs  mod.rs  pr.rs
plugins/autonomous/cli/src/daemon/: mod.rs  pid.rs  socket.rs
plugins/autonomous/cli/src/queue/: mod.rs  models.rs  repository.rs  schema.rs
plugins/autonomous/cli/src/scanner/: issues.rs  mod.rs  pulls.rs
plugins/autonomous/cli/tests/: cli_tests.rs  config_loader_tests.rs  daemon_consumer_tests.rs  daemon_scan_tests.rs  repository_tests.rs
plugins/github-autopilot/cli/: Cargo.toml
plugins/github-autopilot/cli/src/: config.rs  fs.rs  gh.rs  git.rs  github.rs  lib.rs  main.rs
plugins/github-autopilot/cli/tests/: check_stagnation_tests.rs  check_tests.rs  cli_e2e.rs  config_tests.rs  epic_tests.rs  events_tests.rs  issue_list_tests.rs  issue_tests.rs  mock_fs.rs  mock_gh.rs  mock_git.rs  mock_github.rs  pipeline_tests.rs  preflight_tests.rs  stats_tests.rs  store_conformance.rs  suppress_tests.rs  task_tests.rs  watch_scenarios.rs  watch_tests.rs  worktree_tests.rs
plugins/suggest-workflow/cli/: Cargo.toml
plugins/suggest-workflow/cli/src/: lib.rs  main.rs  tokenizer.rs  types.rs
plugins/suggest-workflow/cli/tests/: blackbox_correctness.rs  blackbox_edge_cases.rs  blackbox_index.rs  blackbox_output.rs  blackbox_query.rs  blackbox_resolve.rs  blackbox_role_filter.rs  blackbox_session_filter.rs  blackbox_v2_compat.rs  korean_patterns_test.rs  korean_tokenizer_test.rs
(+1122 files in other folders)
