[package]
name = "atelier"
version = "0.5.3"
edition = "2021"

[lib]
name = "atelier"
path = "src/lib.rs"

[[bin]]
name = "atelier"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
hex = "0.4"
log = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
unicode-normalization = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true

[package.metadata.ci]
features = []

[[package.metadata.ci.targets]]
os = "ubuntu-latest"
artifact-suffix = "linux-x86_64"

[[package.metadata.ci.targets]]
os = "macos-latest"
artifact-suffix = "darwin-aarch64"
