[package]
name = "atelier"
version = "0.5.8"
edition = "2021"

[lib]
name = "atelier"
path = "src/lib.rs"

[[bin]]
name = "atelier"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true

[package.metadata.ci]
features = []

[[package.metadata.ci.targets]]
os = "ubuntu-latest"
artifact-suffix = "linux-x86_64"

[[package.metadata.ci.targets]]
os = "macos-latest"
artifact-suffix = "darwin-aarch64"
