[package]
name = "autodev"
version = "0.2.3"
edition = "2021"

[lib]
name = "autodev"
path = "src/lib.rs"

[[bin]]
name = "autodev"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async trait (dyn Trait + async fn)
async-trait = "0.1"

libc = "0.2"

# Utils
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
