[package]
name = "autopilot"
version = "0.25.0"
edition = "2021"

[lib]
name = "autopilot"
path = "src/lib.rs"

[[bin]]
name = "autopilot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
