[package]
name = "suggest-workflow"
version = "2.0.0"
edition = "2021"
authors = ["Claude Code Plugin"]
description = "Session analysis and workflow suggestion CLI"

[[bin]]
name = "suggest-workflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lindera = { version = "2.1", features = ["lindera-ko-dic", "embed-ko-dic"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rayon = "1.10"
regex = "1.10"
walkdir = "2.5"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

[features]
default = []
lindera-korean = ["lindera"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }

[package.metadata.ci]
features = ["lindera-korean"]

[[package.metadata.ci.targets]]
os = "macos-latest"
artifact-suffix = "darwin-aarch64"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
